--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ jobs:
   external-workflow:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: abystoma/external-workflow/checkout@v3
         with:
            ref: 3eb718710f20d7df6874acdc41e189a2ae4182f5
       - name: Greetings
